--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,20 @@ dependencies:
   flutter_timezone: ^1.0.6
   get_it: ^7.6.0
 
+  fluttertoast: ^8.2.1
+
+  #For login and signup purpose
   firebase_core: ^3.4.0
 
   cloud_firestore:
 
   firebase_auth: ^5.2.0
+
+  random_string: ^2.3.1
+
+  google_sign_in: ^6.2.1
+
+  flutter_svg: ^2.0.10+1
 
   #For accessing firebase storage (for uploading files)
   firebase_storage: ^12.2.0
@@ -39,17 +48,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
   # The following line ensures that the Material Icons font is
