--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   flutter_timezone: ^1.0.6
   get_it: ^7.6.0
   fluttertoast: ^8.2.1
+  solana_wallet_adapter: ^0.1.5
+  reown_appkit: ^1.0.1
+
+  logger:
 
   #For login and signup purpose
   firebase_core: ^3.4.0
