--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   reown_appkit: ^1.0.1
   flutter_stripe: null
   cached_network_image:
+  permission_handler: ^10.2.0
+  geolocator: ^9.0.2
 
   logger:
 
